[package]
name = "rs-soroban-ultrahonk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "26.0.0-rc.1", default-features = false, features = ["alloc"] }
ultrahonk_soroban_verifier = { path = "ultrahonk-soroban-verifier", default-features = false }

[dev-dependencies]
# Enable test helpers for local unit tests
soroban-sdk = { version = "26.0.0-rc.1", features = ["testutils", "alloc"] }
soroban-env-host = "26.1.2"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"
strip = true
