[package]
name = "ultrahonk_soroban_verifier"
version = "0.1.0"
edition = "2021"

license     = "MIT"
description = "Rust verifier for UltraHonk proofs"
repository  = "https://github.com/yugocabrio/rs-soroban-ultrahonk"

[dependencies]

hex = { version = "0.4", default-features = false, features = ["alloc"] }

lazy_static = { version = "1.4", optional = true }
soroban-sdk = { version = "26.0.0-rc.1", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "26.0.0-rc.1", default-features = false, features = ["testutils"] }

[features]
default = ["alloc"]
std = [
    "hex/std",
    "lazy_static",
]
trace = []

alloc = [
    "hex/alloc",
]
